feat: add detail page and link sections
- Add detail.html for education/projects/experience/publications
- Make homepage cards and timeline entries clickable
- Add hover/focus styles for linked blocks

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="徐北辰（Beichen Xu）｜非雨（ThisRainIsNotARealRain）创始人/CEO：以 RealRain（AIGC 多 Agent 与数字孪生生产系统）推动动漫内容工业化；方向涵盖 AI4Science、计算机视觉与多模态、Physics ML。" />
     <link rel="stylesheet" href="style.css">
 </head>
-<body>image.png
+<body>
     <div id="top"></div>
     <a class="skip-link" href="#main-content">
         <span lang="zh-CN">跳转到正文</span>
@@ -136,8 +136,8 @@
                 <h2><span lang="zh-CN">关于</span><span lang="en">About</span></h2>
                 <div class="prose">
                     <p>
-                        <span lang="zh-CN">我现在在创业，担任非雨（ThisRainIsNotARealRain）创始人/CEO。我们面向动漫内容生产的工业化升级，在 RealRain 上构建“可控、可编辑、可协作、可规模化”的 AIGC 多 Agent 生产系统：将传统产线映射为可模拟/回放/调度的数字孪生产线，并用多模态资产管理与一致性控制沉淀长期内容资产。我的工程与研究经验来自计算机视觉/视觉语言与多模态（GIS·遥感）、AI4Science 与 Physics ML，擅长把研究原型推进为可复现、可交付的系统。</span>
-                        <span lang="en">I’m currently building ThisRainIsNotARealRain as Founder/CEO. With RealRain, we’re upgrading animation production via a controllable, editable, collaborative, and scalable AIGC multi-agent system: a digital-twin pipeline with simulation/replay/scheduling, plus multimodal asset management and consistency control for long-term content assets. My background spans computer vision/vision-language and multimodal learning (GIS/remote sensing), AI4Science, and physics ML—bridging research prototypes into reproducible, shippable systems.</span>
+                        <span lang="zh-CN">我现在在创业，担任非雨（ThisRainIsNotARealRain）创始人/CEO。我们面向动漫内容生产的工业化升级，在 RealRain 上构建“可控、可编辑、可协作、可规模化”的 AIGC 多 Agent 生产系统：将传统产线映射为可模拟/回放/调度的数字孪生产线，并用多模态资产管理与一致性控制沉淀长期内容资产。我的工程与研究经验来自计算机视觉/视觉语言与多模态、AI4Science 与 Physics ML，擅长把研究原型推进为可复现、可交付的系统。</span>
+                        <span lang="en">I’m currently building ThisRainIsNotARealRain as Founder/CEO. With RealRain, we’re upgrading animation production via a controllable, editable, collaborative, and scalable AIGC multi-agent system: a digital-twin pipeline with simulation/replay/scheduling, plus multimodal asset management and consistency control for long-term content assets. My background spans computer vision/vision-language and multimodal learning, AI4Science, and physics ML—bridging research prototypes into reproducible, shippable systems.</span>
                     </p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
             <div class="container">
                 <h2><span lang="zh-CN">教育</span><span lang="en">Education</span></h2>
                 <div class="grid cards">
-                    <article class="card">
+                    <a class="card card-link" href="detail.html?item=education-imperial-mres">
                         <h3 class="card-title">
                             <span lang="zh-CN">帝国理工学院 · MRes</span>
                             <span lang="en">Imperial College London · MRes</span>
@@ -162,8 +162,8 @@
                             <li>FPGA</li>
                             <li><span lang="zh-CN">宇宙学</span><span lang="en">Cosmology</span></li>
                         </ul>
-                    </article>
-                    <article class="card">
+                    </a>
+                    <a class="card card-link" href="detail.html?item=education-birmingham-bsc">
                         <h3 class="card-title">
                             <span lang="zh-CN">伯明翰大学 · BSc</span>
                             <span lang="en">University of Birmingham · BSc</span>
@@ -178,7 +178,7 @@
                             <li><span lang="zh-CN">量子力学</span><span lang="en">Quantum Mechanics</span></li>
                             <li><span lang="zh-CN">线性代数</span><span lang="en">Linear Algebra</span></li>
                         </ul>
-                    </article>
+                    </a>
                 </div>
             </div>
         </section>
@@ -187,7 +187,7 @@
             <div class="container">
                 <h2><span lang="zh-CN">项目</span><span lang="en">Projects</span></h2>
                 <div class="grid cards">
-                    <article class="card">
+                    <a class="card card-link" href="detail.html?item=project-aerodit">
                         <div class="card-media" aria-hidden="true">
                             <img src="./BeichenXu/images/AERO.png" alt="" decoding="async" />
                         </div>
@@ -204,9 +204,9 @@
                             <li><span lang="zh-CN">Transformer</span><span lang="en">Transformers</span></li>
                             <li><span lang="zh-CN">流体力学</span><span lang="en">Fluid Dynamics</span></li>
                         </ul>
-                    </article>
+                    </a>
 
-                    <article class="card">
+                    <a class="card card-link" href="detail.html?item=project-gravitational-wave-wgan">
                         <div class="card-media" aria-hidden="true">
                             <img src="./BeichenXu/images/LISA.png" alt="" decoding="async" />
                         </div>
@@ -223,9 +223,9 @@
                             <li>PyTorch Lightning</li>
                             <li><span lang="zh-CN">高性能计算</span><span lang="en">HPC</span></li>
                         </ul>
-                    </article>
+                    </a>
 
-                    <article class="card">
+                    <a class="card card-link" href="detail.html?item=project-gis-remote-sensing-pipelines">
                         <div class="card-media" aria-hidden="true">
                             <img src="./BeichenXu/images/GIS.png" alt="" decoding="async" />
                         </div>
@@ -242,9 +242,9 @@
                             <li>LoRA</li>
                             <li><span lang="zh-CN">多 GPU</span><span lang="en">Multi-GPU</span></li>
                         </ul>
-                    </article>
+                    </a>
 
-                    <article class="card">
+                    <a class="card card-link" href="detail.html?item=project-ml-enhanced-bayesian-inference">
                         <div class="card-media" aria-hidden="true">
                             <img src="./BeichenXu/images/klcdm-planck-hidden-layers=5.png" alt="" decoding="async" />
                         </div>
@@ -261,7 +261,7 @@
                             <li><span lang="zh-CN">嵌套采样</span><span lang="en">Nested Sampling</span></li>
                             <li>Python</li>
                         </ul>
-                    </article>
+                    </a>
                 </div>
             </div>
         </section>
@@ -270,7 +270,8 @@
             <div class="container">
                 <h2><span lang="zh-CN">经历</span><span lang="en">Experience</span></h2>
                 <ol class="timeline">
-                    <li class="timeline-item">
+                    <li>
+                    <a class="timeline-item timeline-link" href="detail.html?item=experience-thisrain-founder">
                         <div class="timeline-head">
                             <h3 class="timeline-title">
                                 <span lang="zh-CN">创始人 / CEO · 非雨（AIGC 创业）</span>
@@ -292,9 +293,11 @@
                                 <span lang="en">Building multimodal asset management and retrieval with alignment and consistency control for long-term reusable content assets.</span>
                             </li>
                         </ul>
+                    </a>
                     </li>
 
-                    <li class="timeline-item">
+                    <li>
+                    <a class="timeline-item timeline-link" href="detail.html?item=experience-maptech-ai-engineer">
                         <div class="timeline-head">
                             <h3 class="timeline-title">
                                 <span lang="zh-CN">AI 算法工程师 · MapTech（北京）</span>
@@ -309,8 +312,10 @@
                             <li><span lang="zh-CN">搭建可复现的多 GPU 训练/评估工作流，优化数据标注对齐与 benchmarking。</span><span lang="en">Built reproducible multi-GPU training/evaluation workflows and improved curation, alignment, and benchmarking.</span></li>
                             <li><span lang="zh-CN">与产品/工程团队合作，将研究原型落地为生产 pipeline 组件。</span><span lang="en">Collaborated with product/engineering to translate prototypes into deployable components.</span></li>
                         </ul>
+                    </a>
                     </li>
-                    <li class="timeline-item">
+                    <li>
+                    <a class="timeline-item timeline-link" href="detail.html?item=experience-science42-researcher">
                         <div class="timeline-head">
                             <h3 class="timeline-title">
                                 <span lang="zh-CN">AI 算法研究员 · Science42.tech（北京）</span>
@@ -324,8 +329,10 @@
                             <li><span lang="zh-CN">开发 physics-informed AI 模型并推动高质量论文产出（投稿至《Physics of Fluids》等）。</span><span lang="en">Developed physics-informed AI models and contributed to high-quality publications (e.g., submissions to Physics of Fluids).</span></li>
                             <li><span lang="zh-CN">与跨学科团队协作研究代码与流程，并指导实习生完成科研与技术任务。</span><span lang="en">Worked with interdisciplinary teams on research pipelines and mentored interns on technical/research tasks.</span></li>
                         </ul>
+                    </a>
                     </li>
-                    <li class="timeline-item">
+                    <li>
+                    <a class="timeline-item timeline-link" href="detail.html?item=experience-kavli-intern">
                         <div class="timeline-head">
                             <h3 class="timeline-title">
                                 <span lang="zh-CN">暑期实习 · Kavli Institute of Cosmology（剑桥）</span>
@@ -337,8 +344,10 @@
                             <li><span lang="zh-CN">研究 ML 增强的 Bayesian inference：使用 nested sampling 训练宇宙学数据，并用 masked aggressive flow 生成后验。</span><span lang="en">Worked on ML-enhanced Bayesian inference for cosmology: nested sampling + masked aggressive flow for posterior generation.</span></li>
                             <li><span lang="zh-CN">参与开源 Python 包 “margarine” 的贡献与协作。</span><span lang="en">Contributed to the “margarine” Python package on GitHub.</span></li>
                         </ul>
+                    </a>
                     </li>
-                    <li class="timeline-item">
+                    <li>
+                    <a class="timeline-item timeline-link" href="detail.html?item=experience-purple-mountain-intern">
                         <div class="timeline-head">
                             <h3 class="timeline-title">
                                 <span lang="zh-CN">暑期实习 · 紫金山天文台（南京）</span>
@@ -350,6 +359,7 @@
                             <li><span lang="zh-CN">对 GRB 现象做系统性综述；用 Python 对 Swift GRB 数据进行拟合与分析。</span><span lang="en">Reviewed GRB literature and analyzed Swift GRB data with Python (fitting and statistical analysis).</span></li>
                             <li><span lang="zh-CN">使用统计方法改进参数估计，熟悉 iminuit 的最小化与误差分析流程。</span><span lang="en">Applied statistical methods for parameter estimation; used iminuit for minimization and uncertainty analysis.</span></li>
                         </ul>
+                    </a>
                     </li>
                 </ol>
             </div>
@@ -386,16 +396,20 @@
             <div class="container">
                 <h2><span lang="zh-CN">论文</span><span lang="en">Publications</span></h2>
                 <ol class="pubs">
-                    <li class="pub">
+                    <li>
+                    <a class="pub pub-link" href="detail.html?item=publication-expanding-balloon">
                         <p class="pub-title">“An expanding balloon: a small universe.”</p>
                         <p class="muted pub-meta">
                             <span lang="zh-CN">Xu, Beichen; Su, Jun; Wang, Weiguo · Physics Education 53.6 (2018): 065005.</span>
                             <span lang="en">Xu, Beichen; Su, Jun; Wang, Weiguo · Physics Education 53.6 (2018): 065005.</span>
                         </p>
+                    </a>
                     </li>
-                    <li class="pub">
+                    <li>
+                    <a class="pub pub-link" href="detail.html?item=publication-aerodit-paper">
                         <p class="pub-title">“AeroDiT: Diffusion Transformers for Reynolds-Averaged Navier-Stokes Simulations of Airfoil Flows”</p>
                         <p class="muted pub-meta">Beichen Xu, Yuhao Ma, Biyue Pan, Hao Zheng, Zhibo Dai, Chunyang Wang, Hui Xiang, Dixia Fan</p>
+                    </a>
                     </li>
                 </ol>
             </div>
